[Add] Diagramme de classe + Recap ité6 + opti VueGantt